[project]
name = "tmbackend"
version = "0.1.0"
description = "tmbackend using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1",
    "dotenv>=0.9.9",
    "pymongo[srv]>=4.15.4",
]

[project.scripts]
tmbackend = "tmbackend.main:run"
run_crew = "tmbackend.main:run"
train = "tmbackend.main:train"
replay = "tmbackend.main:replay"
test = "tmbackend.main:test"
run_with_trigger = "tmbackend.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
